# BrajPath

./: .dockerignore  .env.example  .gitignore  BUGS_FIXED.md  BUGS_SUMMARY.txt  BUG_REPORT.md  CONTRIBUTING.md  Dockerfile  FIXES_APPLIED.md  HOW_TO_USE.md  LICENSE  PATENT_DETAILS.md  PATENT_FIGURES.md  PROJECT_STRUCTURE.md  QUICK_START.txt  README.md  SECURITY.md  SERVER_RUNNING.md  START_HERE.md  TODO.md  brajpath.db  demo_bot.py  pyproject.toml  pyrightconfig.json  quick_test.py  requirements.txt  test_bot.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: webhook.py
app/data/: translations.json  translations_backup.json
app/db/: models.py  seed.py  session.py
app/services/: context_service.py  state_machine.py  temple_service.py  timezone_utils.py
brajpath.egg-info/: PKG-INFO  SOURCES.txt
docs/: meta-cloud-api-migration.md  twilio-production-deployment.md
migrations/: v1.1_migration.sql  v1_schema.sql
scripts/: check_db.py  check_handlers.py  init_db.py  run_seed.py
tests/: conftest.py  test_bot_flows.py  test_edge_cases.py
